# scripts

./: .gitignore  README.md  make_pairs.py
AMT_tests/: evaluate.ipynb  global_max.npy  global_max_train.npy  global_mean.npy  global_min.npy  global_std.npy  inspect.ipynb  label.ipynb  load.ipynb  main.ipynb  output_file.mid  preprocess.ipynb  redo.ipynb  train.ipynb
AMT_tests/results/: output.mid  output_file.mid  output_transcription.mid
FFT/: FFT.ipynb  FFT.py  requirements.txt
compare_midi/: main.py  main2.py  seq1.mid  seq1_diff_note.mid  seq1_diff_tempo.mid  seq2.mid  seq2_diff_note.mid  seq2_diff_tempo.mid  seq2_diff_tempo2.mid
fetch_steam/: main.py  requirements.txt
fetch_steam/app/: fetch_steam.py
fetch_steam/consts/: __init__.py
grafana/: docker-compose.yaml
grafana/prometheus/: prometheus.yml
lilypond/: pyproject.toml  test.ly
preprocessing/src/: Copie de pivot_table.csv  test.ipynb
shuffle_list/: shuffle.py
transcription/: bayes.ipynb  transcribe.ipynb
